feat: 增加一个接口
