# address/v1/api.pb.validate.go
@@ -83,6 +83,8 @@ func (m *NewBip44Request) validate(all bool) error {
 
 	// no validation rules for Ty
 
+	// no validation rules for Flag
+
 	if len(errors) > 0 {
 		return NewBip44RequestMultiError(errors)
 	}
@@ -413,3 +415,143 @@ var _ interface {
 	Cause() error
 	ErrorName() string
 } = NewBip44ReplyValidationError{}
+
+// Validate checks the field values on NewBip441Reply with the rules defined in
+// the proto definition for this message. If any rules are violated, the first
+// error encountered is returned, or nil if there are no violations.
+func (m *NewBip441Reply) Validate() error {
+	return m.validate(false)
+}
+
+// ValidateAll checks the field values on NewBip441Reply with the rules defined
+// in the proto definition for this message. If any rules are violated, the
+// result is a list of violation errors wrapped in NewBip441ReplyMultiError,
+// or nil if none found.
+func (m *NewBip441Reply) ValidateAll() error {
+	return m.validate(true)
+}
+
+func (m *NewBip441Reply) validate(all bool) error {
+	if m == nil {
+		return nil
+	}
+
+	var errors []error
+
+	// no validation rules for Success
+
+	// no validation rules for Code
+
+	// no validation rules for Message
+
+	for idx, item := range m.GetData() {
+		_, _ = idx, item
+
+		if all {
+			switch v := interface{}(item).(type) {
+			case interface{ ValidateAll() error }:
+				if err := v.ValidateAll(); err != nil {
+					errors = append(errors, NewBip441ReplyValidationError{
+						field:  fmt.Sprintf("Data[%v]", idx),
+						reason: "embedded message failed validation",
+						cause:  err,
+					})
+				}
+			case interface{ Validate() error }:
+				if err := v.Validate(); err != nil {
+					errors = append(errors, NewBip441ReplyValidationError{
+						field:  fmt.Sprintf("Data[%v]", idx),
+						reason: "embedded message failed validation",
+						cause:  err,
+					})
+				}
+			}
+		} else if v, ok := interface{}(item).(interface{ Validate() error }); ok {
+			if err := v.Validate(); err != nil {
+				return NewBip441ReplyValidationError{
+					field:  fmt.Sprintf("Data[%v]", idx),
+					reason: "embedded message failed validation",
+					cause:  err,
+				}
+			}
+		}
+
+	}
+
+	if len(errors) > 0 {
+		return NewBip441ReplyMultiError(errors)
+	}
+
+	return nil
+}
+
+// NewBip441ReplyMultiError is an error wrapping multiple validation errors
+// returned by NewBip441Reply.ValidateAll() if the designated constraints
+// aren't met.
+type NewBip441ReplyMultiError []error
+
+// Error returns a concatenation of all the error messages it wraps.
+func (m NewBip441ReplyMultiError) Error() string {
+	var msgs []string
+	for _, err := range m {
+		msgs = append(msgs, err.Error())
+	}
+	return strings.Join(msgs, "; ")
+}
+
+// AllErrors returns a list of validation violation errors.
+func (m NewBip441ReplyMultiError) AllErrors() []error { return m }
+
+// NewBip441ReplyValidationError is the validation error returned by
+// NewBip441Reply.Validate if the designated constraints aren't met.
+type NewBip441ReplyValidationError struct {
+	field  string
+	reason string
+	cause  error
+	key    bool
+}
+
+// Field function returns field value.
+func (e NewBip441ReplyValidationError) Field() string { return e.field }
+
+// Reason function returns reason value.
+func (e NewBip441ReplyValidationError) Reason() string { return e.reason }
+
+// Cause function returns cause value.
+func (e NewBip441ReplyValidationError) Cause() error { return e.cause }
+
+// Key function returns key value.
+func (e NewBip441ReplyValidationError) Key() bool { return e.key }
+
+// ErrorName returns error name.
+func (e NewBip441ReplyValidationError) ErrorName() string { return "NewBip441ReplyValidationError" }
+
+// Error satisfies the builtin error interface
+func (e NewBip441ReplyValidationError) Error() string {
+	cause := ""
+	if e.cause != nil {
+		cause = fmt.Sprintf(" | caused by: %v", e.cause)
+	}
+
+	key := ""
+	if e.key {
+		key = "key for "
+	}
+
+	return fmt.Sprintf(
+		"invalid %sNewBip441Reply.%s: %s%s",
+		key,
+		e.field,
+		e.reason,
+		cause)
+}
+
+var _ error = NewBip441ReplyValidationError{}
+
+var _ interface {
+	Field() string
+	Reason() string
+	Key() bool
+	Cause() error
+	ErrorName() string
+} = NewBip441ReplyValidationError{}
